Fixed z-index
git-svn-id: https://xbox/svnroot/Qorus/trunk@3303 e9028eec-4831-4325-a917-4dc279fcb47c

--- a/css/base.css
+++ b/css/base.css
@@ -251,7 +251,7 @@ aside {
   height: 20px;
   padding: 5px 0;
   text-align: center;
-  z-index: 1190;
+  z-index: 1000;
   top: 0;
   left: 0;
   width: 100%;
